--- a/lab.html
+++ b/lab.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vortex</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
     <style>
 
         p { text-indent: 25px; }
 
         /* Подключение шрифта и базовые стили */
         body {
-            font-family: 'Roboto', sans-serif;
+            font-family: "Neucha", cursive;
+            font-weight: 400;
+            font-style: normal;
+
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
