https://github.com/Pureshca/KvitkinaUliana231-3211Veb

--- a/lab.html
+++ b/lab.html
@@ -3,118 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Vortex</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
-    <style>
-
-        p { text-indent: 25px; }
-
-        /* Подключение шрифта и базовые стили */
-        body {
-            font-family: "Neucha", cursive;
-            font-weight: 400;
-            font-style: normal;
-
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-
-        /* Контейнер для полей */
-        .container {
-            max-width: 1000px; /* Уменьшение максимальной ширины */
-            margin: 0 auto; /* Автоматические поля слева и справа */
-            padding: 40px; /* Увеличенные внутренние отступы */
-            background-color: #fff; /* Фон для содержания */
-        }
-
-        /* Шапка сайта */
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 15px;
-            text-align: center;
-        }
-
-        header h1 {
-            margin: 0;
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-            margin: 10px 0;
-        }
-
-        nav ul li {
-            display: inline;
-            margin: 0 10px;
-        }
-
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-        }
-
-        /* Основное содержимое */
-        main {
-            padding: 20px 0;
-        }
-
-        h2 {
-            color: #333;
-        }
-
-        /* Блок с изображением */
-        section img {
-            display: block;
-            margin: 10px 0;
-        }
-
-        /* Маркированный список преимуществ */
-        ul {
-            padding-left: 20px;
-        }
-
-        /* Таблица с блюдами */
-        table {
-            width: 70%;
-            border-collapse: collapse;
-            margin: 20px 0;
-        }
-
-        table, th, td {
-            border: 1px solid #ddd;
-        }
-
-        th, td {
-            padding: 8px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #f4f4f4;
-        }
-
-        /* Футер */
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-
-        footer a {
-            color: #fff;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-    </style>
 </head>
 <body>
     <!-- Контейнер для содержания сайта с увеличенными полями -->
