https://github.com/Pureshca/KvitkinaUliana231-3211Veb

--- a/lab.html
+++ b/lab.html
@@ -13,11 +13,13 @@
     <!-- Контейнер для содержания сайта с увеличенными полями -->
     <div class="container">
         <!-- Шапка сайта -->
-        <header>
+        <header id= "g">
             <h1>Vortex</h1>
             <nav>
                 <ul>
+                    <li><a href="#g" class="active">Главная</a></li>
                     <li><a href="#gas">О ресторане</a></li>
+                    <li><a href="Lanch.html">Заказ на дом</a></li>
                     <li><a href="#menu">Меню</a></li>
                     <li><a href="#contacts">Контакты</a></li>
                 </ul>
