--- a/Lanch.html
+++ b/Lanch.html
@@ -30,7 +30,7 @@
                 <div class="filter-buttons">
                     <button class="filter-button" data-kind="fish">Рыбный</button>
                     <button class="filter-button" data-kind="meat">Мясной</button>
-                    <button class="filter-button" data-kind="vegetarian">Вегетарианский</button>
+                    <button class="filter-button" data-kind="veg">Вегетарианский</button>
                 </div>
                 <div class="menu-grid" id="soups-menu"></div>
             </section>
@@ -40,7 +40,7 @@
                     <div class="filter-buttons">
                         <button class="filter-button" data-kind="fish">Рыбный</button>
                         <button class="filter-button" data-kind="meat">Мясной</button>
-                        <button class="filter-button" data-kind="vegetarian">Вегетарианский</button>
+                        <button class="filter-button" data-kind="veg">Вегетарианский</button>
                     </div>
                     <div class="menu-grid" id="main-menu">
             </section>
@@ -59,7 +59,7 @@
                 <div class="filter-buttons">
                     <button class="filter-button" data-kind="fish">Рыбный</button>
                     <button class="filter-button" data-kind="meat">Мясной</button>
-                    <button class="filter-button" data-kind="vegetarian">Вегетарианский</button>
+                    <button class="filter-button" data-kind="veg">Вегетарианский</button>
                 </div>
                 <div class="menu-grid" id="salat-menu"></div>
             </section>
