--- a/Lanch.html
+++ b/Lanch.html
@@ -247,7 +247,8 @@
             
                     <div class="form-buttons">
                         <button type="button" id="reset-button">Сбросить</button>
-                        <button type="submit">Отправить</button>
+                        <!-- Кнопка оформления заказа -->
+                        <button type="order-button" id="order-button" disabled>Оформить заказ</button>
                     </div>
                 </div>
             </form>
