--- a/lab.html
+++ b/lab.html
@@ -20,6 +20,8 @@
                     <li><a href="#g" class="active">Главная</a></li>
                     <li><a href="#gas">О ресторане</a></li>
                     <li><a href="Lanch.html">Заказ на дом</a></li>
+                    <li><a href="zakaz.html">Оформить заказ</a></li>
+                    <li><a href="istoria.html">История заказов</a></li>
                     <li><a href="#menu">Меню</a></li>
                     <li><a href="#contacts">Контакты</a></li>
                 </ul>
