--- a/zakaz.html
+++ b/zakaz.html
@@ -19,6 +19,7 @@
                     <li><a href="lab.html#gas">О ресторане</a></li>
                     <li><a href="Lanch.html">Заказ на дом</a></li>
                     <li><a href="zakaz.html" class="active">Оформить заказ</a></li>
+                    <li><a href="istoria.html">История заказов</a></li>
                     <li><a href="lab.html#menu">Меню</a></li>
                     <li><a href="#contacts">Контакты</a></li>
                 </ul>
