--- a/экз/cart.html
+++ b/экз/cart.html
@@ -83,7 +83,7 @@
         <img src="logo.png" alt="Логотип" class="logo">
         <div class="logo">Магазин</div>
         <div class="links">
-            <a href="fail.html">Каталог</a>
+            <a href="index.html">Каталог</a>
             <a href="profile.html">Личный кабинет</a>
         </div>
     </header>
