--- a/экз/profile.html
+++ b/экз/profile.html
@@ -14,7 +14,7 @@
         <img src="logo.png" alt="Логотип" class="logo">
         <div class="logo">Магазин</div>
         <div class="links">
-            <a href="fail.html">Каталог</a>
+            <a href="index.html">Каталог</a>
             <a href="cart.html">Корзина</a>
         </div>
     </header>
